feat : upgrade to spring boot 4 (#2113)
* feat : upgrade to spring boot 4

* fix : test failures

* implement code review comment

* implement code review